fuckin motivation message app

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!--attaches script file functions-->
+    <script src="script.js"></script>
+    
 </head>
 
 <body id="page-top" class="index">
@@ -76,9 +79,11 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
-                        <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <div id="fuckingmessage">
+                            <span id="bigfuckingtext">Just fucking <a href="javascript:void(0)" onclick='changeFuckingText()'>do it!</a></span>
+                            <p>
+                            <a href="javascript:void(0)" onclick="changeFuckingText()" value="Change Text">Fucking done! Next!</a>
+                        </div>
                     </div>
                 </div>
             </div>
