linkedin js framework

--- a/authorized_user.html
+++ b/authorized_user.html
@@ -32,6 +32,12 @@
     <!--attaches script file functions-->
     <script src="script.js"></script>
 
+    <!--linkedin js framework-->
+    <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+    api_key: <put_your_api_key_here>
+    authorize: true
+    </script>
+
 
 </head>
 
