--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--linkedin js framework-->
     <script type="text/javascript" src="http://platform.linkedin.com/in.js">
-    api_key: <put_your_api_key_here>
+    api_key: 75xudtkb6ks3aw
     authorize: true
     </script>
 
@@ -89,7 +89,7 @@
 
                     <!-- test social network login API-->
                     <button onclick= 'connectLinkedInUser()'> 
-                        LinkedIn</button>
+                        Signin through LinkedIn</button>
 
 
 
