--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!--attaches script file functions-->
+    <!--custom js script-->
     <script src="script.js"></script>
 
     <!--linkedin js framework-->
@@ -88,7 +88,7 @@
 
 
                     <!-- test social network login API-->
-                    <button onclick= 'connectLinkedInUser()'> 
+                    <a class="hidden" onclick= 'connectLinkedInUser()'> 
                         Signin through LinkedIn</button>
 
 
