error button correction

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     <!-- test social network login API-->
                     <a class="hidden" onclick= 'connectLinkedInUser()'> 
-                        Signin through LinkedIn</button>
+                        Signin through LinkedIn</a>
 
 
 
