--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 
                     <!-- test social network login API-->
-                    <a class="hidden" onclick= 'connectLinkedInUser()'> 
+                    <a class="hidden" href="javascript:connectLinkedInUser()"> 
                         Signin through LinkedIn</a>
-
+                    
 
 
                     <div class="intro-text">
