remove hidden class on link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
                     <!-- test social network login API-->
-                    <a class="hidden" href="javascript:connectLinkedInUser()"> 
+                    <a href="javascript:connectLinkedInUser()"> 
                         Signin through LinkedIn</a>
                     
 
