removed fking message

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                         Signin through LinkedIn</a>
                     
 
-
+                    <!--
                     <div class="intro-text">
                         <div id="fuckingmessage">
                             <span id="bigfuckingtext">Just fucking <a href="javascript:void(0)" onclick='changeFuckingText()'>do it!</a></span>
                             <p>
                             <a href="javascript:void(0)" onclick="changeFuckingText()" value="Change Text">Fucking done! Next!</a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
