LinkedIn js onload

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!--linkedin js framework-->
     <script type="text/javascript" src="http://platform.linkedin.com/in.js">
     api_key: 75xudtkb6ks3aw
+    onLoad: OnLinkedInFrameworkLoad
     authorize: true
     </script>
 
