--- a/authorized_user.html
+++ b/authorized_user.html
@@ -86,6 +86,8 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
 
+                    
+                    <p id="authcode"></p>
 
                     <!-- test social network login API-->
                     <button onclick= 'getProfile()'> 
