--- a/authorized_user.html
+++ b/authorized_user.html
@@ -41,7 +41,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" onload="getToken()">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
