--- a/authorized_user.html
+++ b/authorized_user.html
@@ -37,6 +37,9 @@
     api_key: <put_your_api_key_here>
     authorize: true
     </script>
+    
+    <!--jqery google cdn library-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
 </head>
