--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <!-- test social network login API-->
                     <a href="javascript:connectLinkedInUser()" class="btn btn-lg btn-outline"> 
-                        Signin through LinkedIn</a>
+                         Login with LinkedIn</a>
                     
 
                     <!--
