--- a/authorized_user.html
+++ b/authorized_user.html
@@ -29,15 +29,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!--attaches script file functions-->
+    <!--custom js script-->
     <script src="script.js"></script>
 
-    <!--linkedin js framework-->
-    <script type="text/javascript" src="http://platform.linkedin.com/in.js">
-    api_key: <put_your_api_key_here>
-    authorize: true
-    </script>
-    
     <!--jqery google cdn library-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
