--- a/index.html
+++ b/index.html
@@ -32,12 +32,8 @@
     <!--custom js script-->
     <script src="script.js"></script>
 
-    <!--linkedin js framework-->
-    <script type="text/javascript" src="http://platform.linkedin.com/in.js">
-    api_key: 75xudtkb6ks3aw
-    onLoad: OnLinkedInFrameworkLoad
-    authorize: true
-    </script>
+    <!--jqery google cdn library-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
 </head>
