added another jquery library for dealing with json

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <!--jqery google cdn library-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     
 
 
