update jquery library

--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!--custom js script-->
-    <script src="script.js"></script>
-
-    <!--jqery google cdn library-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!--jqery library-->
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     
-
-
+    <!--custom js script-->
+    <script src="script.js"></script>
 
 </head>
 
